nginx-ingress/restrict-annotations/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: restrict-annotations
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../restrict-annotations.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: ig-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: ig-bad.yaml
